# redjubjub

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yaml  main.yml
benches/: bench.rs
frost-msg-spec/: msg_spec.html  msg_spec.md  msg_spec.org  msg_spec.tex  msg_spec.txt  refs.bib
src/: batch.rs  error.rs  frost.rs  hash.rs  lib.rs  messages.rs  public_key.rs  scalar_mul.rs  secret_key.rs  signature.rs  signing_key.rs  traits.rs  verification_key.rs
src/frost/: aggregator.rs  config.rs  keygen.rs  share.rs  signer.rs
src/messages/: arbitrary.rs  constants.rs  serialize.rs  tests.rs  validate.rs
src/messages/tests/: integration.rs  prop.rs
tests/: batch.rs  bincode.rs  frost.rs  librustzcash_vectors.rs  proptests.rs  smallorder.rs
