[package]
name = "redjubjub"
edition = "2021"
# When releasing to crates.io:
# - Update CHANGELOG.md
# - Create git tag.
version = "0.8.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>", "Deirdre Connolly <durumcrustulum@gmail.com>", "Chelsea Komlo <me@chelseakomlo.com>", "Daira-Emma Hopwood <daira@jacaranda.org>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/redjubjub"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "jubjub", "redjubjub", "zcash"]
description = "A standalone implementation of the RedJubjub signature scheme."

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
reddsa = { version = "0.5.0", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
thiserror = { version = "1.0", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
bincode = "1"
criterion = "0.5"
lazy_static = "1.4"
proptest = "1.0"
rand = "0.9"
rand_chacha = "0.3"
serde_json = "1.0"

[features]
nightly = []
default = ["serde", "std"]
std = ["dep:thiserror", "reddsa/std"]

[[bench]]
name = "bench"
harness = false
